2002-10-07  Ralf Habacker  <Ralf.Habacker@freenet.de>

	* pe-dll.cc (autofilter_symbolprefixlist): Don't re-export
	auto-import symbols.
	(make_one): Create _nm_<symbol> for data only.

2002-10-05  Elias Athanasopoulos  <eathan@otenet.gr>

	* ldlang.c (lang_file_exist): New function.
	(new_afile): Abort if the filename to be added matches the linker 
	output filename.
	* ldlang.h: Add prototype for lang_file_exist.
	* lexsup.c (parse_args): Abort if the output filename matches
	one of the input filenames.

2002-10-02  Alan Modra  <amodra@bigpond.net.au>

	* emulparams/elf64ppc.sh (MAXPAGESIZE): Set to 0x10000.

2002-09-30  Alan Modra  <amodra@bigpond.net.au>

	* scripttempl/elfd30v.sc: Order reloc sections placing .plt last.
	* scripttempl/elfm68hc11.sc: Likewise.
	* scripttempl/elfm68hc12.sc: Likewise.

	* emultempl/elf32.em (output_rel_find): Always place orphan loadable
	reloc sections just before .rel.plt/.rela.plt.
	(gld${EMULATION_NAME}_place_orphan <.rel>): Remove combreloc code.
	Only put loadable reloc sections in hold_rel.

2002-09-29  H.J. Lu <hjl@gnu.org>

	* emulparams/elf32ppc.sh (OTHER_GOT_RELOC_SECTIONS): New.

2002-09-25  Daniel Jacobowitz  <drow@mvista.com>

	From "Anita Kulkarni" <AnitaK@kpit.com>
	* scripttempl/sh.sc: Handle .eh_frame* and .gcc_exc*
	sections.

2002-09-25  Alan Modra  <amodra@bigpond.net.au>

	* genscripts.sh (SEGMENT_SIZE): Use MAXPAGESIZE before
	TARGET_PAGE_SIZE.
	* scripttempl/elf.sc (DATA_SEGMENT_ALIGN): Incorporate
	SEGMENT_SIZE alignment.
	* emulparams/elf64ppc.sh (DATA_ADDR): Delete.
	(SEGMENT_SIZE): Define.

	* ldexp.c (fold_unary): New.  Split out from exp_fold_tree.
	(fold_binary): Correct abs - non-abs case.
	(fold_trinary): New.  Split out from exp_fold_tree.

2002-09-24  Alan Modra  <amodra@bigpond.net.au>

	* emulparams/elf64ppc.sh (DATA_ADDR): Define.
	* emulparams/elf64_aix.sh (DATA_ADDR): Don't use a fixed address
	for start of .data, instead align up to 256M boundary.
	* scripttempl/aix.sc: Likewise.
