@@ -483,6 +483,5 @@ extern void lang_register_vers_node
 	   struct bfd_elf_version_deps *));
 boolean unique_section_p PARAMS ((const char *));
 extern void lang_add_unique PARAMS ((const char *));
-extern boolean lang_file_exists PARAMS ((const char *));
 
 #endif
